// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<LinkButton /> should render a disabled link button 1`] = `
<Anchor
  href="#"
  onClick={[Function]}
>
  <span
    className="button neutral disabled"
  >
    testing testing 123
  </span>
</Anchor>
`;

exports[`<LinkButton /> should render a link button with a simple text 1`] = `
<Anchor
  href="#"
  onClick={[Function]}
>
  <span
    className="button neutral"
  >
    testing testing 123
  </span>
</Anchor>
`;

exports[`<LinkButton /> should render a link button with a size large 1`] = `
<Anchor
  href="#"
  onClick={[Function]}
>
  <span
    className="button large neutral"
  >
    testing testing 123
  </span>
</Anchor>
`;

exports[`<LinkButton /> should render a link button with a type delete-subtle 1`] = `
<Anchor
  href="#"
  onClick={[Function]}
>
  <span
    className="button delete-subtle"
  >
    testing testing 123
  </span>
</Anchor>
`;

exports[`<LinkButton /> should render a link button with an icon 1`] = `
<Anchor
  href="test"
  onClick={[Function]}
>
  <span
    className="button primary"
  >
    <span
      className="button-icon left"
    >
      <FontAwesomeIcon
        type="star"
      />
    </span>
    Link Button with Icon
  </span>
</Anchor>
`;

exports[`<LinkButton /> should render a link button with manual extra props for the anchor 1`] = `
<Anchor
  anchorComponentProps={
    Object {
      "someProp": false,
    }
  }
  href="test"
  onClick={[Function]}
>
  <span
    className="button primary"
  >
    <span
      className="button-icon left"
    >
      <FontAwesomeIcon
        type="star"
      />
    </span>
    Link Button with Icon
  </span>
</Anchor>
`;
